@@ -3,12 +3,11 @@ package com.zhentao.review.google.high;
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertThat;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.Test;
 /**
- * 
+ *
  * <pre>
  * {{'O','P','O','B','O','O','P'},
  *  {'O','O','O','O','O','O','O'},
@@ -30,6 +29,6 @@ public class BicylesForPeopleTest {
         final List<Pair> list = bp.find(input);
         assertThat(list.size(), is(2));
         assertThat(list, is(
-                Arrays.asList(new Pair(new Point(0, 1), new Point(0, 3)), new Pair(new Point(0, 6), new Point(4, 6)))));
+                List.of(new Pair(new Point(0, 1), new Point(0, 3)), new Pair(new Point(0, 6), new Point(4, 6)))));
     }
 }
