@@ -3,7 +3,7 @@ package com.zhentao.review.leetcode;
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertThat;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.Test;
 
@@ -12,8 +12,8 @@ public class SpiralMatrixTest {
     public void test() {
         int[][] input = { { 1, 2, 3 }, { 4, 5, 6 }, { 7, 8, 9 } };
         final SpiralMatrix spiral = new SpiralMatrix();
-        assertThat(spiral.spiralOrder(input), is(Arrays.asList(1, 2, 3, 6, 9, 8, 7, 4, 5)));
+        assertThat(spiral.spiralOrder(input), is(List.of(1, 2, 3, 6, 9, 8, 7, 4, 5)));
         input = new int[][] { { 1, 2, 3, 4 }, { 5, 6, 7, 8 }, { 9, 10, 11, 12 } };
-        assertThat(spiral.spiralOrder(input), is(Arrays.asList(1, 2, 3, 4, 8, 12, 11, 10, 9, 5, 6, 7)));
+        assertThat(spiral.spiralOrder(input), is(List.of(1, 2, 3, 4, 8, 12, 11, 10, 9, 5, 6, 7)));
     }
 }
